Enhancements:
	* Performance improvements
	* Added multithreaded event loop
	* Added LSB compliant init.d script to contrib/ directory (contributed by Dietmar Scharf).
Bug fixes:
	* Bug #9833 - Cannot execute binaries inside ZFS filesystems.
	* Bug #9834 - Terminating zfs-fuse didn't unmount filesystems.
	* Bug #9835 - zfs-fuse would exit when killing zfs or zpool with ctrl-c.
	* Bug #9841 - zpool export fails with -f force option. Bug reported and fixed by philwozza.
	* Bug #10071 - Cannot copy write protected file.
	* Fixed bug where opened read-only files couldn't be ftruncated() (fixes IOzone sanity check).
	* Fixed bug where files bigger than 2 GB couldn't be opened on 64-bit platforms.
	* Fixed crash/segfault after interrupting user processes with CTRL-C.
	* Fixed compilation error on CentOS 4.4 (reported by Leroy van Logchem).
	* 'zfs umount /path/to/mntpoint' didn't work.
	* Fixed stray /dev/dsk errors.
	* Marked stack as non-executable. Found and fixed by Phil Worral (philwozza).

2006/12/26 - Release 0.4.0_alpha1
--------------------------------------------------
Features:
	* Updated ZFS code to Nevada build 53
	* Enabled write support for ZFS filesystems

2006/12/23 - Release 0.3.1
--------------------------------------------------
Bug fixes:
	* Fixed bug #9746 - Compilation error on Fedora Core 6
Enhancements:
	* Display a more useful error message when the zfs-fuse daemon is not running.
	  Suggestion by rincebrain.

2006/12/14 - Release 0.3.0
--------------------------------------------------
Features:
	* Updated ZFS code to Nevada build 50
	* Implemented read-only support for ZFS filesystems

2006/08/27 - Release 0.2.2
--------------------------------------------------
Bug fixes:
	* Fixed compilation error -- lib/libsolcompat/include/sys/stat.h:48: error: `BLKGETSIZE64' undeclared
	  Problem reported by Roland Kletzing.

2006/08/22 - Release 0.2.1
--------------------------------------------------
Features: